# rag-basics

./: CLAUDE.md  README.md  pyproject.toml  requirements.txt
data-parsing/: data-ingestion.ipynb
docs/text_file/: ai-concepts-overview.txt  cloud-computing-overview.txt
